--- a/src/main/jni-cpp-src/common/CMakeLists.txt
+++ b/src/main/jni-cpp-src/common/CMakeLists.txt
@@ -9,8 +9,6 @@ if (POLICY CMP0054)
   cmake_policy(SET CMP0054 NEW)
 endif()
 
-cmake_policy(SET CMP0074 NEW)
-
 find_package(Td REQUIRED)
 
 if (NOT JNI_FOUND)
@@ -19,7 +17,7 @@ endif()
 message(STATUS "Found JNI: ${JNI_INCLUDE_DIRS} ${JNI_LIBRARIES}")
 
 if (NOT Java_FOUND)
-  find_package(Java 1.6 REQUIRED)
+  find_package(Java REQUIRED)
 endif()
 message(STATUS "Found Java: ${Java_JAVAC_EXECUTABLE} ${Java_JAVADOC_EXECUTABLE}")
 
