--- a/.travis.yml
+++ b/.travis.yml
@@ -11,7 +11,7 @@ env:
   - IMPLEMENTATION_NAME=tdlib
   - IMPLEMENTATION_NAME=tdlight
 osx_image: xcode11.3
-dist: bionic
+dist: xenial
 before_install:
   - cp .travis.settings.xml $HOME/.m2/settings.xml
   - chmod +x travis/build.sh
