--- a/.travis.yml
+++ b/.travis.yml
@@ -62,4 +62,6 @@ cache:
 
 install: ./travis/install_dependencies.sh
 script: ./travis/build.sh
-after_success: ./travis/build_success.sh
+after_success:
+  - if [ "$TRAVIS_BRANCH" = "develop" ]; then ./travis/build_success.sh; fi
+  - if [ "$TRAVIS_BRANCH" = "master" ]; then ./travis/deploy.sh; fi
