Update .travis.yml, deploy_release.sh, and deploy_snapshot.sh

--- a/.travis.yml
+++ b/.travis.yml
@@ -16,6 +16,7 @@ before_install:
   - cp .travis.settings.xml $HOME/.m2/settings.xml
   - chmod +x travis/build.sh
   - chmod +x travis/build_success.sh
+  - chmod +x travis/deploy.sh
   - chmod +x travis/install_dependencies.sh
   - chmod +x travis/setup_variables.sh
 addons:
