--- a/.travis.yml
+++ b/.travis.yml
@@ -8,8 +8,8 @@ arch:
   - amd64
   - arm64
 env:
-  - IMPLEMENTATION_NAME=tdlib
-  - IMPLEMENTATION_NAME=tdlight
+  - IMPLEMENTATION_NAME=tdlib CACHE_NAME=tdlib
+  - IMPLEMENTATION_NAME=tdlight CACHE_NAME=tdlight
 osx_image: xcode11.3
 dist: bionic
 before_install:
