--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,9 +29,11 @@ jobs:
           # ====== Variables
           REVISION=${{ github.run_number }}
           GH_MATRIX_ARCH=${{ matrix.arch }}
-          
+
+          echo "$(realpath .)"
+          ls -alch .
           source ./github-workflows/setup-variables.sh
-          
+
           echo "REVISION=$REVISION" >> $GITHUB_ENV
           echo "TD_SRC_DIR=$TD_SRC_DIR" >> $GITHUB_ENV
           echo "TD_BIN_DIR=$TD_BIN_DIR" >> $GITHUB_ENV
