--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -29,15 +29,20 @@ jobs:
       - uses: actions/checkout@v2
         with:
           submodules: "recursive"
+      - name: Setup ccache variables
+        run: |
+          ARCH=${{ matrix.arch }}
+          SAFE_ARCH=$(echo $ARCH | sed 's/\//\-/g')
+          echo "CCACHE_SAFE_ARCH=$SAFE_ARCH" >> $GITHUB_ENV
       - name: Cache ccache
         if: runner.os == 'Linux'
         id: cache-ccache
         uses: actions/cache@v2
         with:
           path: ~/.ccache
-          key: ${{ runner.os }}-${{ env.SAFE_ARCH }}-ccache-all
+          key: ${{ runner.os }}-${{ env.CCACHE_SAFE_ARCH }}-ccache-all
           restore-keys: |
-            ${{ runner.os }}-${{ env.SAFE_ARCH }}-ccache-
+            ${{ runner.os }}-${{ env.CCACHE_SAFE_ARCH }}-ccache-
       - name: Setup Java
         uses: actions/setup-java@v1
         with:
