Update build.yaml and install-dependencies.sh

--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -87,12 +87,8 @@ jobs:
         shell: bash
         run: |
           echo "REVISION: $REVISION"
-          cat $GITHUB_ENV
-          echo "REVISION: ${{env.REVISION}}"
-          mkdir build
-          cd build
-          CXXFLAGS="-stdlib=libc++" CC=/usr/bin/clang-10 CXX=/usr/bin/clang++-10 cmake -DCMAKE_BUILD_TYPE=Release -DCMAKE_INSTALL_PREFIX:PATH=../tdlib ..
-          cmake --build . --target install -- -j4
+
+          source ./github-workflows/install-dependencies.sh
       - uses: actions/upload-artifact@v2
         with:
           name: tdlight-${{ env.SAFE_ARCH }}
