--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -10,15 +10,17 @@ jobs:
   build:
     strategy:
       matrix:
-        implementation: [tdlight, tdlib]
         include:
-        - {os: ubuntu-20.04, arch: "linux/386"}
-        - {os: ubuntu-20.04, arch: "linux/amd64"}
-        - {os: ubuntu-20.04, arch: "linux/arm/v6"}
-        - {os: ubuntu-20.04, arch: "linux/arm/v7"}
-        - {os: ubuntu-20.04, arch: "linux/ppc64le"}
-        - {os: windows-2019, arch: "amd64"}
-        - {os: macos-10.15, arch: "amd64"}
+        - {os: ubuntu-20.04, arch: "linux/386", implementation: "tdlight"}
+        - {os: ubuntu-20.04, arch: "linux/amd64", implementation: "tdlight"}
+        - {os: ubuntu-20.04, arch: "linux/amd64", implementation: "tdlib"}
+        - {os: ubuntu-20.04, arch: "linux/arm/v6", implementation: "tdlight"}
+        - {os: ubuntu-20.04, arch: "linux/arm/v7", implementation: "tdlight"}
+        - {os: ubuntu-20.04, arch: "linux/ppc64le", implementation: "tdlight"}
+        - {os: windows-2019, arch: "amd64", implementation: "tdlight"}
+        - {os: windows-2019, arch: "amd64", implementation: "tdlib"}
+        - {os: macos-10.15, arch: "amd64", implementation: "tdlight"}
+        - {os: macos-10.15, arch: "amd64", implementation: "tdlib"}
     runs-on: ${{ matrix.os }}
     steps:
       - name: Install sudo package
