--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -105,10 +105,14 @@ jobs:
           source ./github-workflows/build.sh
       - id: getfilename
         shell: bash
+        run: echo "::set-output name=file::$(cd generated/target; ls tdli*-natives-*shaded.jar)"
+      - id: getfilepath
+        shell: bash
         run: echo "::set-output name=file::$(ls generated/target/tdli*-natives-*shaded.jar)"
       - uses: actions/upload-artifact@v2
         with:
-          path: ${{ steps.getfilename.outputs.file }}
+          name: ${{ steps.getfilename.outputs.file }}
+          path: ${{ steps.getfilepath.outputs.file }}
       - name: Deploy snapshot to Maven
         shell: bash
         run: |
