--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -12,11 +12,15 @@ jobs:
       matrix:
         include:
         - {os: ubuntu-20.04, arch: "linux/386", implementation: "tdlight"}
+        - { os: ubuntu-20.04, arch: "linux/386", implementation: "tdlib" }
         - {os: ubuntu-20.04, arch: "linux/amd64", implementation: "tdlight"}
         - {os: ubuntu-20.04, arch: "linux/amd64", implementation: "tdlib"}
         - {os: ubuntu-20.04, arch: "linux/arm/v6", implementation: "tdlight"}
-        - {os: ubuntu-20.04, arch: "linux/arm/v7", implementation: "tdlight"}
+        - { os: ubuntu-20.04, arch: "linux/arm/v6", implementation: "tdlib" }
+        - { os: ubuntu-20.04, arch: "linux/arm/v7", implementation: "tdlight" }
+        - { os: ubuntu-20.04, arch: "linux/arm/v7", implementation: "tdlib" }
         - {os: ubuntu-20.04, arch: "linux/ppc64le", implementation: "tdlight"}
+        - { os: ubuntu-20.04, arch: "linux/ppc64le", implementation: "tdlib" }
         - {os: windows-2019, arch: "amd64", implementation: "tdlight"}
         - {os: windows-2019, arch: "amd64", implementation: "tdlib"}
         - {os: macos-10.15, arch: "amd64", implementation: "tdlight"}
