--- a/.gitmodules
+++ b/.gitmodules
@@ -1,9 +1,9 @@
-[submodule "tdlib-serializer"]
-	path = tdlib-serializer
-	url = https://git.ignuranza.net/windoz/tdlib-serializer.git
 [submodule "implementations/tdlib"]
 	path = implementations/tdlib
 	url = https://github.com/tdlib/td.git
 [submodule "implementations/tdlight"]
 	path = implementations/tdlight
 	url = https://git.ignuranza.net/tdlight-team/tdlight.git
+[submodule "scripts/core/tdlib-serializer"]
+	path = scripts/core/tdlib-serializer
+	url = https://git.ignuranza.net/windoz/tdlib-serializer.git
