--- a/.github/workflows/platform_natives.yaml
+++ b/.github/workflows/platform_natives.yaml
@@ -8,7 +8,7 @@ on:
 jobs:
   build:
     name: Build Docker image (${{ matrix.arch }})
-    runs-on: ubuntu-20.04
+    runs-on: ${{ matrix.os }}
     strategy:
       matrix:
         include:
