--- a/.github/workflows/platform_natives.yaml
+++ b/.github/workflows/platform_natives.yaml
@@ -123,7 +123,6 @@ jobs:
           server-username: MAVEN_USERNAME
           server-password: MAVEN_PASSWORD
       - name: Setup variables
-        if: matrix.usedocker == 'false'
         shell: bash
         run: |
           # ====== Variables
@@ -134,6 +133,7 @@ jobs:
 
           source ./scripts/continuous-integration/github-workflows/setup-variables.sh
 
+          echo "Variables:"
           echo "REVISION=$REVISION" >> $GITHUB_ENV
           echo "BUILD_TYPE=$BUILD_TYPE" >> $GITHUB_ENV
           echo "IMPLEMENTATION_NAME=$IMPLEMENTATION_NAME" >> $GITHUB_ENV
