--- a/.github/workflows/platform_natives.yaml
+++ b/.github/workflows/platform_natives.yaml
@@ -12,18 +12,18 @@ jobs:
     strategy:
       matrix:
         include:
-        - {os: ubuntu-18.04, usedocker: "true", arch: "linux/386", implementation: "tdlight"}
-        - {os: ubuntu-18.04, usedocker: "true", arch: "linux/386", implementation: "tdlib"}
+        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/386", implementation: "tdlight"}
+        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/386", implementation: "tdlib"}
         - {os: ubuntu-18.04, usedocker: "false", arch: "linux/amd64", implementation: "tdlight"}
         - {os: ubuntu-18.04, usedocker: "false", arch: "linux/amd64", implementation: "tdlib"}
-        - {os: ubuntu-18.04, usedocker: "true", arch: "linux/arm/v6", implementation: "tdlight"}
-        - {os: ubuntu-18.04, usedocker: "true", arch: "linux/arm/v6", implementation: "tdlib"}
-        - {os: ubuntu-18.04, usedocker: "true", arch: "linux/arm/v7", implementation: "tdlight"}
-        - {os: ubuntu-18.04, usedocker: "true", arch: "linux/arm/v7", implementation: "tdlib"}
-        - {os: ubuntu-18.04, usedocker: "true", arch: "linux/arm64", implementation: "tdlight"}
-        - {os: ubuntu-18.04, usedocker: "true", arch: "linux/arm64", implementation: "tdlib"}
-        - {os: windows-2019, usedocker: "false", arch: "amd64", implementation: "tdlight"}
-        - {os: windows-2019, usedocker: "false", arch: "amd64", implementation: "tdlib"}
+        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/arm/v6", implementation: "tdlight"}
+        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/arm/v6", implementation: "tdlib"}
+        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/arm/v7", implementation: "tdlight"}
+        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/arm/v7", implementation: "tdlib"}
+        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/arm64", implementation: "tdlight"}
+        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/arm64", implementation: "tdlib"}
+        - {os: windows-2019, usedocker: "false", arch: "amd64", implementation: "tdlight", triplet: "x64-windows-static"}
+        - {os: windows-2019, usedocker: "false", arch: "amd64", implementation: "tdlib", triplet: "x64-windows-static"}
         - {os: macos-10.15, usedocker: "false", arch: "amd64", implementation: "tdlight"}
         - {os: macos-10.15, usedocker: "false", arch: "amd64", implementation: "tdlib"}
     steps:
@@ -162,6 +162,28 @@ jobs:
           echo "OPERATING_SYSTEM_NAME_SHORT=$OPERATING_SYSTEM_NAME_SHORT" >> $GITHUB_ENV
           echo "SRC_TDJNI_LIBNAME=$SRC_TDJNI_LIBNAME" >> $GITHUB_ENV
           echo "DEST_TDJNI_LIBNAME=$DEST_TDJNI_LIBNAME" >> $GITHUB_ENV
+      - name: Install latest CMake
+        if: matrix.os == 'windows-2019'
+        uses: lukka/get-cmake@latest
+      - name: Restore artifacts, or setup vcpkg (do not install any package)
+        if: matrix.os == 'windows-2019'
+        uses: lukka/run-vcpkg@v7
+        with:
+          # Just install vcpkg for now, do not install any ports in this step yet.
+          setupOnly: true
+          # Location of the vcpkg submodule in the Git repository.
+          vcpkgDirectory: '${{ env.VCPKG_DIR }}'
+          # Since the cache must be invalidated when content of the vcpkg.json file changes, let's
+          # compute its hash and append this to the computed cache's key.
+          appendedCacheKey: ${{ hashFiles( '**/vcpkg_manifest/vcpkg.json' ) }}
+          vcpkgTriplet: ${{ matrix.triplet }}
+          # Ensure the vcpkg artifacts are cached, they are generated in the 'CMAKE_BINARY_DIR/vcpkg_installed' directory.
+      - name: Install vcpkg deps
+        if: matrix.os == 'windows-2019'
+        run: |
+          $VCPKG_DIR/vcpkg install gperf openssl:x64-windows-static zlib:x64-windows-static
+        shell: bash
+
       - name: Install dependencies
         if: matrix.usedocker == 'false'
         shell: bash
