--- a/.github/workflows/platform_natives.yaml
+++ b/.github/workflows/platform_natives.yaml
@@ -16,12 +16,14 @@ jobs:
         - {os: ubuntu-18.04, usedocker: "false", arch: "linux/386", implementation: "tdlib"}
         - {os: ubuntu-18.04, usedocker: "false", arch: "linux/amd64", implementation: "tdlight"}
         - {os: ubuntu-18.04, usedocker: "false", arch: "linux/amd64", implementation: "tdlib"}
-        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/arm/v6", implementation: "tdlight"}
-        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/arm/v6", implementation: "tdlib"}
-        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/arm/v7", implementation: "tdlight"}
-        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/arm/v7", implementation: "tdlib"}
+        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/armhf", implementation: "tdlight"}
+        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/armhf", implementation: "tdlib"}
         - {os: ubuntu-18.04, usedocker: "false", arch: "linux/arm64", implementation: "tdlight"}
         - {os: ubuntu-18.04, usedocker: "false", arch: "linux/arm64", implementation: "tdlib"}
+        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/s390x", implementation: "tdlight"}
+        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/s390x", implementation: "tdlib"}
+        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/ppc64le", implementation: "tdlight"}
+        - {os: ubuntu-18.04, usedocker: "false", arch: "linux/ppc64le", implementation: "tdlib"}
         - {os: windows-2019, usedocker: "false", arch: "amd64", implementation: "tdlight", triplet: "x64-windows-static"}
         - {os: windows-2019, usedocker: "false", arch: "amd64", implementation: "tdlib", triplet: "x64-windows-static"}
         - {os: macos-10.15, usedocker: "false", arch: "amd64", implementation: "tdlight"}
