--- a/.github/workflows/tdapi_file.yaml
+++ b/.github/workflows/tdapi_file.yaml
@@ -111,7 +111,8 @@ jobs:
         run: |
           echo "REVISION: $REVISION"
 
-          ./scripts/continuous-integration/github-workflows/deploy-snapshot.sh
+          API_TYPE=legacy ./scripts/continuous-integration/github-workflows/deploy-snapshot.sh
+          API_TYPE=sealed ./scripts/continuous-integration/github-workflows/deploy-snapshot.sh
         env:
           MAVEN_USERNAME: ${{ secrets.MCHV_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MCHV_TOKEN }}
@@ -121,8 +122,10 @@ jobs:
         run: |
           echo "REVISION: $REVISION"
 
-          ./scripts/continuous-integration/github-workflows/deploy-release.sh
-          ./scripts/continuous-integration/github-workflows/deploy-javadoc.sh
+          API_TYPE=legacy ./scripts/continuous-integration/github-workflows/deploy-release.sh
+          API_TYPE=sealed ./scripts/continuous-integration/github-workflows/deploy-release.sh
+          API_TYPE=legacy ./scripts/continuous-integration/github-workflows/deploy-javadoc.sh
+          API_TYPE=sealed ./scripts/continuous-integration/github-workflows/deploy-javadoc.sh
         env:
           MAVEN_USERNAME: ${{ secrets.MCHV_USERNAME }}
           MAVEN_PASSWORD: ${{ secrets.MCHV_TOKEN }}
